additional features for commenting

--- a/_posts/2025-12-12-first.md
+++ b/_posts/2025-12-12-first.md
@@ -3,6 +3,7 @@ title: "Hello World!"
 date: 2025-12-12 16:38:00 +/-TTTT
 categories: [blog]
 tags: [jekyll, chirpy, blog, git, github, github blog, github Pages, velog]
+comments: true
 math: true
 toc: true
 #pin: true
