new posting 2025-12-13 ch6-2

--- a/_posts/2025-12-12-algo-ch6-1.md
+++ b/_posts/2025-12-12-algo-ch6-1.md
@@ -12,6 +12,10 @@ toc: true
   #alt: image alternative text
 ---
 
+참고 도서: 최영규, ⌜파이썬 알고리즘⌟ 생능츨판, 2021  
+<br>
+
+
 지금까지 다루었던 정렬 방법들은 모두 <u>배열의 요소들을 서로 비교하여 정렬</u>하였다. 그런데 이러한 비교 연산을 사용하지 않고도 데이터를 정렬할 수 있는 독특한 정렬 기법들이 있다.  
 
 > **<비교 기반의 정렬(Comparsion based sorting)>**
@@ -62,7 +66,7 @@ $e.g.$
 <br>
 
 $sol \ 1.$  
-위 방법과 동일하게 0에서 99까지 번호가 매겨진 100개의 버킷을 사용한다.  
+위 방법과 동일하게 0에서 999까지 번호가 매겨진 1000개의 버킷을 사용한다.  
 → 자릿수가 커질 수록 사용해야 할 추가 메모리도 늘어나기 때문에 그다지 좋은 방법은 아니다..
 <br>
 
@@ -73,12 +77,12 @@ $sol \ 2.$
 
 <p style="text-align: center; font-weight: bold; font-style:italic;">
   만약 숫자를 <mark>10진법</mark>으로 나타낸다면? <br>
-  → 버킷 <mark>10개</mark>만 있으면 정렬이 가능하다.
+  → 버킷 <mark>10개</mark>만 있으면 정렬이 가능하다!
 </p>  
 
 <p style="text-align: center; font-weight: bold; font-style:italic;">
   만약 숫자를 <mark>2진법</mark>으로 나타낸다면? <br>
-  → 버킷 <mark>2개</mark>만 있으면 정렬이 가능하다.
+  → 버킷 <mark>2개</mark>만 있으면 정렬이 가능하다!
 </p>  
 <br>
 
@@ -154,6 +158,7 @@ Radix sorted list:  [416, 864, 2903, 2920, 3603, 5511, 6967, 7751, 9310, 9741]
 $$O(d \times (n+n)) = O(dn)$$
 
 <mark>→ 따라서, 기수 정렬은 $O(dn)$의 시간 복잡도를 갖는다.</mark>  
+<br>
 
 
 ### **5-2. 공간 복잡도**
