--- a/_posts/2025-12-12-first.md
+++ b/_posts/2025-12-12-first.md
@@ -15,7 +15,7 @@ toc: true
 **"Github Blog First Commit Test"**
 
 ## **첫 블로그 포스팅입니다!**
-안녕하세요. 제 이름은 황재진 입니다.  
+안녕하세요.  
 저는 현재 국립부경대학교 4학년 재학 중이며 정보통신공학을 전공하고 있습니다.  
   
   
