fix: add alt attributes to images

--- a/_posts/2025-12-13-algo-ch6-2.md
+++ b/_posts/2025-12-13-algo-ch6-2.md
@@ -24,7 +24,7 @@ toc: true
 리스트를 한 번 스캔하면서 각 항목이 리스트에 몇 번 나타났는지 빈도수를 계산한다.  
 빈도수가 구해지면 가장 작은 항목부터 순서대로 빈도수 만큼 나열한다.
 
-<img src="/assets/images/python-algorithm/6-5.png">  
+<img src="/assets/images/python-algorithm/6-5.png" alt="그림 6.5 카운팅 정렬 아이디어">  
 <br>
 
 
@@ -45,7 +45,7 @@ $sol.$
 count 배열을 누적합 리스트로 변환하여 각 키값이 최종 리스트에서 차지하는 위치 범위를 계산한다.
 입력 리스트를 뒤에서부터 순회하면서 누적합 정보를 이용해 결과 리스트에 원소를 배치한다.
 ```
-<img src="/assets/images/python-algorithm/6-6.png">  
+<img src="/assets/images/python-algorithm/6-6.png" alt="그림 6.6 빈도 테이블을 위치 테이블로 변환">  
 <br>  
 
 
