--- a/_posts/2025-12-12-algo-ch6-1.md
+++ b/_posts/2025-12-12-algo-ch6-1.md
@@ -55,7 +55,7 @@ $sol.$
 입력 할목들을 순서대로 키값(value)에 따라 해당 버킷에 넣는다.
 위쪽 버킷부터 순차적으로 버킷 안에 들어 있는 숫자를 출력한다.
 ```
-<img src="/assets/images/python-algorithm/6-3.jpg">  
+<img src="/assets/images/python-algorithm/6-3.jpg" alt="그림 6.3 한 자릿수 정렬">  
 <br>
 
 
@@ -72,7 +72,7 @@ $sol \ 1.$
 
 $sol \ 2.$  
 <mark>위와 같이 10개의 버킷만 사용하되, 먼저 낮은 자릿수로 정렬하고, 그 다음 높은 자릿수에 대해 정렬해 나가는 방법을 사용한다.</mark>  
-<img src="/assets/images/python-algorithm/6-4.png">
+<img src="/assets/images/python-algorithm/6-4.png" alt="그림 6.4 여러 자리 숫자 정렬">
 <br>
 
 <p style="text-align: center; font-weight: bold; font-style:italic;">
